# Haskell

99_questions/: 1-10.hs  11-20.hs  21-28.hs  31-41.hs  46-50.hs  90-94.hs
Chap22/: PodDB.hs  PodDownload.hs  PodMain.hs  PodParser.hs  PodTypes.hs
Codewars/: ApplicativeParser.hs  SKI.hs  alg_isomorphism.hs  isomorphism.hs  peano.hs  snail.hs
Graphic/: graph.hs
HTTP/: HttpParser.hs  httpsreq.hs
IO/: HandleIO.hs  MonadHandle.hs  MonadHandleIO.hs  WriterIO.hs
Megaparsec/: Megaparsec.hs  mega.hs
Monad/: MTL.hs  Reader.hs  State.hs
Munch/: Munch.hs
Parser/: Parser.hs  bo.csv
Random/: RandomGen.hs  Supply.hs  Supply.hs~  SupplyClass.hs  SupplyClass.hs~
Scheme/: Env.hs  Eval.hs  LICENSE  Main.hs  Print.hs  README.md  Read.hs  Scheme.cabal  ackermann.scm  int.scm  stdlib.scm
Scheme/app/: Env.hs  Eval.hs  Main.hs  Print.hs  Read.hs
Types/: Applicatives.hs  Foldables.hs  Functors.hs  Monads.hs
Zippers/: zippers.hs
aSchemetemp/: Env.hs  Eval.hs  Main.hs  Print.hs  Read.hs  ackermann.scm  stdlib.scm  stdlib.txt
codewars_utils/: SKI.hs  alg_isomorphism.hs  isomorphism.hs  peano.hs  snail.hs  snail.hs~
filesys/: FileSystem.hs
grahamScan/: grahamScan.hs
project_euler/: euler  euler.hi  euler.hs  euler.hs~
rpn/: rpn.hs
serie/: Serie  Serie.hs  Serie.hs~
shortestPath/: shortestPath.hs
sort/mergesort/: mergesort.hs
sort/quicksort/: quicksort.hs
stats/: Statistic.hs  Statistic.hs~
todo/: todo.hs  todo.txt
